--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ h2 {
 }
 
 .formulario button {
-    background-color: #CB6D43;
+    background-color: #cb439236;
     border: none;
     font-weight: bold;
 }
