--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
 
 :root {
-    --laranja-claro: #b93692;
+    --laranja-claro: #80bbb8;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-    background-color: #ce41ab;
+    background-color: #669fb9;
 }
 
 
@@ -21,13 +21,13 @@ section {
 
 
 .nav-link {
-    color: #CB6D43;
+    color: #00cbda;
     font-weight: 600;
 }
 
 .inicio-fundo {
     /* aula 3 */
-    background-image: url('img/4965007.jpg');
+    background-image: url('img/praia.png;
     /* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: right;
@@ -59,7 +59,7 @@ section {
 .botao-inicio {
     background-color: var(--laranja-claro);
     border-radius: 30px;
-    border: none;
+    border: none;ottom right no-repeat;
     width: 14em;
     /* Convertido para em aumenta o tamanho da fonte por tabela*/
     height: 3em;
@@ -78,8 +78,8 @@ section {
     padding-top: 5rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    background: url('img/flor.png') top right no-repeat,
-        url('img/flor-esquerda.png') bottom left no-repeat;
+    background: url('img/praia.png') top right no-repeat,
+        url('img/praia.png;)
     background-size: 180px 180px;
     /* Ajuste o tamanho conforme necessário */
 }
@@ -107,12 +107,12 @@ h2 {
 }
 
 .fundo-galeria {
-    background: url('img/flor-bottom-direita.png') bottom right no-repeat;
+    background: url('img/praia.png)
     background-size: 180px 180px;
 }
 
 #contato {
-    background-image: url('img/4965007.jpg');
+    background-image: url('img/praia.png);
     background-size: cover;
     padding: 4rem 0;
     /* Espaçamento interno para a seção de contato */
@@ -145,7 +145,7 @@ h2 {
     top:2rem;
     right:20px;
     z-index: 1000;
-}
+}ottom right no-repeat;
 .rotacao-botao{ 
     transform: rotate(-90deg);
     transform-origin: right center;
