--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ h2 {
 }
 
 #contato {
-    background-image: url('img/praia.png');
+    background-image: url('img/lago.jpg');
     background-size: cover;
     padding: 4rem 0;
     /* Espaçamento interno para a seção de contato */
