--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ h2 {
 }
 
 .formulario {
-    background-color: #43fafa;
+    background-color: #89f1f1;
     padding: 2rem;
     /* Espaçamento interno dentro do formulário */
     border-radius: 10px;
@@ -131,12 +131,12 @@ h2 {
 }
 
 .formulario button {
-    background-color: #7feefd88;
+    background-color: #93f1fd88;
     border: none;
     font-weight: bold;
 }
 
 /* chama classe do bootstrap para modificar a cor */
 .form-control {
-    background-color: #6fe1fd6b;
+    background-color: #3acaee6b;
 }
