--- a/styles.css
+++ b/styles.css
@@ -156,3 +156,8 @@ h2 {
     background-color: var(--alto-contraste-fundo);
     color: var(--alto-contraste-texto);
 }
+.alto-contraste header,
+.alto-contraste footer,
+.alto-contraste .formulario{
+    background-color: var(--alto-contraste-fundo);
+    color: var(--alto-contraste-tex
