--- a/styles.css
+++ b/styles.css
@@ -152,12 +152,22 @@ h2 {
     --alto-contraste-texto: #ffffff;
     --alto-contraste-link: #ffd700;
 }
-.alto-contraste{
-    background-color: var(--alto-contraste-fundo);
-    color: var(--alto-contraste-texto);
-}
 .alto-contraste header,
 .alto-contraste footer,
 .alto-contraste .formulario{
     background-color: var(--alto-contraste-fundo);
-    color: var(--alto-contraste-tex
+    color: var(--alto-contraste-texto);
+}
+
+
+.alto-contraste .nav-link{
+    color: var(--alto-contraste-link);
+}
+
+
+.alto-contraste .botao-inicio,
+.alto-contraste .formulario button,
+.alto-contraste .btn-primary{
+    background-color: var(--alto-contraste-link);
+    color: var(--alto-contraste-fundo)
+}
