--- a/styles.css
+++ b/styles.css
@@ -171,3 +171,18 @@ h2 {
     background-color: var(--alto-contraste-link);
     color: var(--alto-contraste-fundo)
 }
+.alto-contraste #tropicalia {
+    background: none;
+}
+
+
+.alto-contraste #galeria {
+    background-color: var(--alto-contraste-fundo);
+}
+
+
+.alto-contraste .fundo-galeria {
+    background: none;
+}
+
+
