--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,7 @@ h2 {
 }
 
 #contato {
-    background-image: url('img/lago.jpg;
+    background-image: url('img/lago.jpg;)
     background-size: cover;
     padding: 4rem 0;
     /* Espaçamento interno para a seção de contato */
