--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,10 @@ body {
 header {
     background-color: #ffffff;
 }
-.root {
-    --laranja-claro: #FF862A;
-    --alto-contraste-fundo: #000000;
-    --alto-contraste-texto: #ffffff;
-    --alto-contraste-link: #ffd700;
+section {
+    padding-bottom: 5rem;
 }
+
 
 
 section {
